# telemetry-health-guardian

./: .gitignore  README.md  REHEARSAL.md  WRITEUP.md  env.example  requirements.txt  verify_mcp_connection.py
demo-agent-app/: README.md  api.py  app.py  chaos.py  citation_service.py  fact_check_and_cite.py  fetch_and_read.py  ollama_r6.py  planner.py  report_writer.py  requirements.txt  telemetry.py
demo-agent-app/fixtures/: generate_fixture_pdf.py
experiments/: debug_stage4.py  debug_stage4_trace_details.py  stage7_notes.txt  stage_guidance.txt  stage_wise_guidance.txt  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage7.py  test_stage8.py
frontend/: app.py  requirements.txt
frontend-next/: next.config.mjs  package-lock.json  package.json
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/app/about/: page.tsx
frontend-next/app/chat/: page.tsx
frontend-next/app/rules/: page.tsx
frontend-next/app/service/[name]/: page.tsx
frontend-next/components/charts/: health-ring.tsx  rule-distribution-bar.tsx  rule-trend-chart.tsx  score-sparkline.tsx
frontend-next/components/product/: api-status-pill.tsx  architecture-diagram.tsx  audit-run-button.tsx  chaos-run-button.tsx  chat-message.tsx  demo-agent-panel.tsx  finding-row.tsx  health-score-card.tsx  narrative-panel.tsx  probable-fix-panel.tsx  recent-findings-rail.tsx  rule-highlight.tsx  rule-legend.tsx  service-card.tsx  suggested-question-chips.tsx
frontend-next/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  combobox.tsx  command.tsx  sheet.tsx  skeleton.tsx  tabs.tsx  toast.tsx  tooltip.tsx
frontend-next/lib/: api.ts  demo-agent-client.ts  query-client.tsx  rule-meta.ts  store.ts
frontend-next/styles/: tokens.css
guardian/: README.md  health_dashboard.json  health_score.py  llm_client.py  main.py  mcp_client.py  narrative.py  pyproject.toml  requirements.txt  scheduler.py  writeback.py
guardian/rules/: __init__.py  r1_missing_fields.py  r2_cardinality.py  r3_orphaned_spans.py  r6_silent_truncation.py  r7_cross_service_breaks.py  types.py
guardian/scripts/: provision_dashboards.py
guardian/tests/: test_health_score.py  test_llm_client.py  test_main.py  test_narrative.py  test_r1_missing_fields.py  test_r2_cardinality.py  test_r3_orphaned_spans.py  test_r6_silent_truncation.py  test_r7_cross_service_breaks.py  test_scheduler.py
otel-griptape/: README.md  pyproject.toml  requirements.txt
otel-griptape/otel_griptape/: __init__.py  context_propagation.py  instrumentor.py  payload_tracking.py  semconv.py
otel-griptape/tests/: test_instrumentor.py
