[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetry-health-guardian"
version = "0.1.0"
description = "Telemetry Health Guardian service (Section 4.3)"
requires-python = ">=3.10"
dependencies = [
    "otel-griptape @ file:///../otel-griptape",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["guardian"]

[tool.pytest.ini_options]
asyncio_mode = "auto"