[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetry-health-guardian"
version = "0.1.0"
description = "Telemetry Health Guardian service (Section 4.3)"
requires-python = ">=3.10"
dependencies = [
    "otel-griptape @ file:///Users/ayushraj/Documents/Python/telemetry-health-guardian/otel-griptape",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.60.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["guardian"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"