[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetry-health-guardian"
version = "0.1.0"
description = "Telemetry Health Guardian service (Section 4.3)"
requires-python = ">=3.10"
dependencies = [
    # otel-griptape is installed separately (`pip install -e otel-griptape`,
    # see the repo root README's Setup section) rather than pinned here
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.60.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["guardian"]

[tool.pytest.ini_options]
asyncio_mode = "auto"