[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otel-griptape"
version = "0.1.0"
description = "GenAI-semconv-compliant OpenTelemetry auto-instrumentation for Griptape"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "griptape>=1.11.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["otel_griptape"]
